@@ -3,6 +3,7 @@ package com.ruoyi.common.utils.file;
 import java.io.ByteArrayInputStream;
 import java.io.FileInputStream;
 import java.io.InputStream;
+import java.net.URI;
 import java.net.URL;
 import java.net.URLConnection;
 import java.util.Arrays;
@@ -57,7 +58,7 @@ public class ImageUtils
 
     /**
      * 读取文件为字节数据
-     * 
+     *
      * @param url 地址
      * @return 字节数据
      */
@@ -69,7 +70,8 @@ public class ImageUtils
             if (url.startsWith("http"))
             {
                 // 网络地址
-                URL urlObj = new URL(url);
+                URI uriObj = URI.create(url);
+                URL urlObj = uriObj.toURL();
                 URLConnection urlConnection = urlObj.openConnection();
                 urlConnection.setConnectTimeout(30 * 1000);
                 urlConnection.setReadTimeout(60 * 1000);
